cmake_minimum_required(VERSION 3.19)
project(A2-SETS-DOT503)

set(CMAKE_CXX_STANDARD 20)

add_executable(A2-SETS-DOT503 setsiumain.cpp)

##install (TARGETS A2-SETS-DOT503 DESTINATION bin) #Cmake_Install_Prefix /bin
##install (FILES setsiumain.cpp DESTINATION src)  #Cmake_Install_Prefix /src

##include(CTest)

##add_test ("Test1" "${CMAKE_CURRENT_BINARY_DIR} /A2-SETS-DOT503")

